--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                                     alt="Azure Data Lake Storage icon"
                                                     loading="lazy" />
                                             </div>
-                                            <div class="azure-pill">ADLS Gen2</div>
+                                            <div class="azure-pill">ADLS</div>
                                         </div>
 
                                         <div class="azure-stack" title="Azure Data Factory">
