--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <a class="btn btn-sm btn-soft" href="https://github.com/FrankRunfola1229" target="_blank" rel="noreferrer">GitHub</a>
                     <a class="btn btn-sm btn-soft" href="https://www.linkedin.com/in/frankrunfola" target="_blank" rel="noreferrer">LinkedIn</a>
                     <a class="btn btn-sm btn-soft" href="mailto:frank.runfola@gmail.com">Email</a>
+                    <a class="btn btn-sm btn-soft" href="assets/data/files/cv.pdf" target="_blank" rel="noreferrer">Résumé</a>
+                    <a class="btn btn-sm btn-soft" href="assets/data/files/diploma.png" target="_blank" rel="noreferrer">Diploma</a>
+
                 </nav>
             </div>
         </header>
