GUI changes and tighter cards

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                                     alt="Azure Data Factory icon"
                                                     loading="lazy" />
                                             </div>
-                                            <div class="azure-pill">ADF</div>
+                                            <div class="azure-pill">Datafactory</div>
                                         </div>
 
                                         <div class="azure-stack" title="Azure Databricks">
