--- a/training.html
+++ b/training.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Frank Runfola — Data Engineering</title>
-        <meta name="description" content="Azure Data Engineering portfolio." />
+        <title>Training — Frank Runfola</title>
+        <meta name="description" content="Training notes and snippets: PySpark, SQL, and Data Modeling." />
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -43,62 +43,56 @@
             </div>
         </header>
 
-        <main class="container pt-1 pb-3 flex-grow-1 d-flex flex-column">
-            <section class="card-soft hero-card p-4 p-md-4 mt-5 mb-3">
-                <div class="d-flex align-items-center gap-3 gap-md-4 flex-wrap">
-                    <img
-                        class="profile-img"
-                        src="assets/img/profile.png"
-                        alt="Frank Runfola headshot"
-                        loading="lazy" />
+        <!-- Back button BELOW navbar (not on Home) -->
+        <div class="page-backbar">
+            <div class="container">
+                <a class="btn btn-sm btn-soft btn-back" href="#" id="navBack" aria-label="Go back">
+                    <i class="bi bi-arrow-left"></i>
+                    <span>Back</span>
+                </a>
+            </div>
+        </div>
 
-                    <div class="flex-grow-1">
-                        <h1 class="headline m-0">Azure Data Engineering.</h1>
-                        <p class="subhead mb-0 mt-2">Simple, auditable pipelines.</p>
-
-                        <!-- Rendered by assets/js/home.js -->
-                        <div class="svc-row hero-services" id="heroServices" aria-label="Core Azure services"></div>
-                    </div>
-                </div>
+        <main class="container pt-4 pb-3 flex-grow-1 d-flex flex-column" style="max-width: 1200px;">
+            <section class="card-soft hero-card p-4 p-md-4 mb-3">
+                <h1 class="headline m-0">Training</h1>
+                <p class="subhead mb-0 mt-2">Short notes and snippets. No fluff.</p>
             </section>
 
-            <!-- 3 fixed-size tiles -->
+            <!-- Training sub-pages as SAME tiles as Home -->
             <section class="hub-row">
                 <div class="row g-3 justify-content-center">
                     <div class="col-12 col-sm-6 col-md-auto">
-                        <a class="hub-btn hub-btn-square hub-tile" href="projects.html" aria-label="Go to Projects">
+                        <a class="hub-btn hub-tile" href="training-pyspark.html" aria-label="Go to PySpark training">
                             <div class="hub-left">
-                                <!-- nicer icon -->
-                                <div class="hub-ico"><i class="bi bi-boxes"></i></div>
+                                <div class="hub-ico"><i class="bi bi-lightning-charge"></i></div>
                                 <div class="text-center">
-                                    <p class="hub-title">Projects</p>
-                                    <p class="hub-sub">End-to-end pipelines</p>
+                                    <p class="hub-title">PySpark</p>
+                                    <p class="hub-sub">Transforms • Delta • patterns</p>
                                 </div>
                             </div>
                         </a>
                     </div>
 
                     <div class="col-12 col-sm-6 col-md-auto">
-                        <a class="hub-btn hub-btn-square hub-tile" href="labs.html" aria-label="Go to Labs">
+                        <a class="hub-btn hub-tile" href="training-sql.html" aria-label="Go to SQL training">
                             <div class="hub-left">
-                                <!-- nicer icon -->
-                                <div class="hub-ico"><i class="bi bi-sliders"></i></div>
+                                <div class="hub-ico"><i class="bi bi-database"></i></div>
                                 <div class="text-center">
-                                    <p class="hub-title">Labs</p>
-                                    <p class="hub-sub">Small experiments</p>
+                                    <p class="hub-title">SQL</p>
+                                    <p class="hub-sub">Joins • windows • analytics</p>
                                 </div>
                             </div>
                         </a>
                     </div>
 
                     <div class="col-12 col-sm-6 col-md-auto">
-                        <a class="hub-btn hub-btn-square hub-tile" href="training.html" aria-label="Go to Training">
+                        <a class="hub-btn hub-tile" href="training-modeling.html" aria-label="Go to Data Modeling training">
                             <div class="hub-left">
-                                <!-- nicer icon -->
-                                <div class="hub-ico"><i class="bi bi-journal-code"></i></div>
+                                <div class="hub-ico"><i class="bi bi-diagram-3"></i></div>
                                 <div class="text-center">
-                                    <p class="hub-title">Training</p>
-                                    <p class="hub-sub">PySpark • SQL • Modeling</p>
+                                    <p class="hub-title">Data Modeling</p>
+                                    <p class="hub-sub">Keys • grain • dims</p>
                                 </div>
                             </div>
                         </a>
@@ -106,17 +100,18 @@
                 </div>
             </section>
 
-            <footer class="pt-4 border-top mt-auto">
+            <footer class="border-top mt-auto pt-5 pb-3">
                 <div class="d-flex justify-content-between flex-wrap gap-2 small text-muted">
                     <div>© <span id="year"></span> Frank Runfola</div>
-                    <div>Static • Azure</div>
+                    <div>Training</div>
                 </div>
             </footer>
         </main>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="assets/js/shared.js"></script>
         <script src="assets/js/nav.js"></script>
-        <script src="assets/js/home.js"></script>
+        <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
     </body>
 </html>
