--- a/projects.html
+++ b/projects.html
@@ -12,66 +12,46 @@
         <link rel="stylesheet" href="assets/css/styles.css">
     </head>
 
-    <body>
-        <header class="site-header">
-            <div class="container py-3">
-                <div class="site-nav d-flex flex-wrap align-items-center justify-content-between gap-3">
-                    <div>
-                        <div class="name">Frank Runfola</div>
-                        <div class="role">Data Engineering • Azure</div>
-                    </div>
+    <body class="min-vh-100 d-flex flex-column" data-page="projects" data-show-back="1" data-footer-right="Projects">
+        <div id="siteHeader"></div>
+        <div id="siteBackbar"></div>
 
-                    <nav class="d-flex flex-wrap gap-2 align-items-center">
-                        <a class="btn btn-sm btn-soft" href="index.html" data-nav>Home</a>
-                        <a class="btn btn-sm btn-soft" href="projects.html" data-nav>Projects</a>
-                        <a class="btn btn-sm btn-soft" href="labs.html" data-nav>Labs</a>
-                        <a class="btn btn-sm btn-soft" href="training.html" data-nav>Training</a>
-
-                        <a class="btn btn-sm btn-soft btn-icon"
-                            href="https://github.com/YOUR_GITHUB" target="_blank" rel="noreferrer"
-                            aria-label="GitHub">
-                            <i class="bi bi-github"></i>
-                        </a>
-
-                        <a class="btn btn-sm btn-soft btn-icon"
-                            href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" rel="noreferrer"
-                            aria-label="LinkedIn">
-                            <i class="bi bi-linkedin"></i>
-                        </a>
-                    </nav>
-                </div>
-            </div>
-        </header>
-
-        <div class="page-backbar">
-            <div class="container">
-                <a class="btn btn-sm btn-soft btn-back" href="#" id="navBack" aria-label="Go back">
-                    <i class="bi bi-arrow-left"></i>
-                    <span>Back</span>
-                </a>
-            </div>
-        </div>
-
-        <main class="container pt-4 pb-5">
+        <main class="container pt-4 pb-3 flex-grow-1 d-flex flex-column">
             <section class="card-soft hero-card p-4 p-md-4 mb-4">
                 <h1 class="headline m-0">Projects</h1>
                 <p class="subhead mb-0 mt-2">End-to-end Azure data engineering builds.</p>
+            </section>
+
+            <section class="d-flex align-items-end justify-content-between flex-wrap gap-2 mb-3">
+                <h2 class="section-title m-0">All projects</h2>
+                <div class="small text-muted" id="updated"></div>
             </section>
 
             <div class="projects-wrap">
                 <section class="row g-4" id="projectsGrid" aria-live="polite"></section>
             </div>
 
-            <footer class="pt-4 border-top mt-auto">
-                <div class="d-flex justify-content-between flex-wrap gap-2 small text-muted">
-                    <div>© <span id="year"></span> Frank Runfola</div>
-                    <div>Projects</div>
-                </div>
-            </footer>
+            <footer id="siteFooter" class="border-top mt-auto pt-5 pb-3"></footer>
         </main>
+
+        <!-- Flow modal -->
+        <div class="modal fade" id="flowModal" tabindex="-1" aria-labelledby="flowModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="flowModalLabel">Flow</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <img id="flowModalImg" class="img-fluid rounded flow-modal-img" src alt="Flow diagram">
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
         <script src="assets/js/shared.js"></script>
+        <script src="assets/js/layout.js"></script>
         <script src="assets/js/nav.js"></script>
         <script src="assets/js/app.js"></script>
     </body>
