--- a/training-pyspark.html
+++ b/training-pyspark.html
@@ -10,53 +10,14 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg">
 
-        <!-- Prism syntax highlighting -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism-tomorrow.min.css">
-
         <link rel="stylesheet" href="assets/css/styles.css">
         <link rel="stylesheet" href="assets/css/pyspark.css">
     </head>
 
-    <body class="min-vh-100 d-flex flex-column">
-        <header class="site-header">
-            <div class="container py-3">
-                <div class="site-nav d-flex flex-wrap align-items-center justify-content-between gap-3">
-                    <div>
-                        <div class="name">Frank Runfola</div>
-                        <div class="role">Data Engineering • Azure</div>
-                    </div>
-
-                    <nav class="d-flex flex-wrap gap-2 align-items-center">
-                        <a class="btn btn-sm btn-soft" href="index.html" data-nav>Home</a>
-                        <a class="btn btn-sm btn-soft" href="projects.html" data-nav>Projects</a>
-                        <a class="btn btn-sm btn-soft" href="labs.html" data-nav>Labs</a>
-                        <a class="btn btn-sm btn-soft" href="training.html" data-nav>Training</a>
-
-                        <a class="btn btn-sm btn-soft btn-icon"
-                            href="https://github.com/YOUR_GITHUB" target="_blank" rel="noreferrer"
-                            aria-label="GitHub">
-                            <i class="bi bi-github"></i>
-                        </a>
-
-                        <a class="btn btn-sm btn-soft btn-icon"
-                            href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" rel="noreferrer"
-                            aria-label="LinkedIn">
-                            <i class="bi bi-linkedin"></i>
-                        </a>
-                    </nav>
-                </div>
-            </div>
-        </header>
-
-        <!-- Back button BELOW navbar -->
-        <div class="page-backbar">
-            <div class="container">
-                <a class="btn btn-sm btn-soft btn-back" href="#" id="navBack" aria-label="Go back">
-                    <i class="bi bi-arrow-left"></i>
-                    <span>Back</span>
-                </a>
-            </div>
-        </div>
+    <body class="min-vh-100 d-flex flex-column" data-page="pyspark" data-show-back="1" data-footer-right="PySpark">
+        <div id="siteHeader"></div>
+        <div id="siteBackbar"></div>
 
         <main class="container pyspark-wrap pt-4 pb-3 flex-grow-1 d-flex flex-column">
             <section class="card-soft hero-card p-4 p-md-4 mb-3">
@@ -66,21 +27,15 @@
 
             <section class="row g-4" id="snippetsGrid" aria-live="polite"></section>
 
-            <footer class="border-top mt-auto pt-5 pb-3">
-                <div class="d-flex justify-content-between flex-wrap gap-2 small text-muted">
-                    <div>© <span id="year"></span> Frank Runfola</div>
-                    <div class="mono">PySpark</div>
-                </div>
-            </footer>
+            <footer id="siteFooter" class="border-top mt-auto pt-5 pb-3"></footer>
         </main>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-
-        <!-- Prism JS -->
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/prism.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-python.min.js"></script>
 
         <script src="assets/js/shared.js"></script>
+        <script src="assets/js/layout.js"></script>
         <script src="assets/js/nav.js"></script>
         <script src="assets/js/pyspark.js"></script>
     </body>
