--- a/training.html
+++ b/training.html
@@ -12,46 +12,9 @@
         <link rel="stylesheet" href="assets/css/styles.css">
     </head>
 
-    <body class="min-vh-100 d-flex flex-column">
-        <header class="site-header">
-            <div class="container py-3">
-                <div class="site-nav d-flex flex-wrap align-items-center justify-content-between gap-3">
-                    <div>
-                        <div class="name">Frank Runfola</div>
-                        <div class="role">Data Engineering • Azure</div>
-                    </div>
-
-                    <nav class="d-flex flex-wrap gap-2 align-items-center">
-                        <a class="btn btn-sm btn-soft" href="index.html" data-nav>Home</a>
-                        <a class="btn btn-sm btn-soft" href="projects.html" data-nav>Projects</a>
-                        <a class="btn btn-sm btn-soft" href="labs.html" data-nav>Labs</a>
-                        <a class="btn btn-sm btn-soft" href="training.html" data-nav>Training</a>
-
-                        <a class="btn btn-sm btn-soft btn-icon"
-                            href="https://github.com/YOUR_GITHUB" target="_blank" rel="noreferrer"
-                            aria-label="GitHub">
-                            <i class="bi bi-github"></i>
-                        </a>
-
-                        <a class="btn btn-sm btn-soft btn-icon"
-                            href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" rel="noreferrer"
-                            aria-label="LinkedIn">
-                            <i class="bi bi-linkedin"></i>
-                        </a>
-                    </nav>
-                </div>
-            </div>
-        </header>
-
-        <!-- Back button BELOW navbar (not on Home) -->
-        <div class="page-backbar">
-            <div class="container">
-                <a class="btn btn-sm btn-soft btn-back" href="#" id="navBack" aria-label="Go back">
-                    <i class="bi bi-arrow-left"></i>
-                    <span>Back</span>
-                </a>
-            </div>
-        </div>
+    <body class="min-vh-100 d-flex flex-column" data-page="training" data-show-back="1" data-footer-right="Training">
+        <div id="siteHeader"></div>
+        <div id="siteBackbar"></div>
 
         <main class="container pt-4 pb-3 flex-grow-1 d-flex flex-column" style="max-width: 1200px;">
             <section class="card-soft hero-card p-4 p-md-4 mb-3">
@@ -59,7 +22,6 @@
                 <p class="subhead mb-0 mt-2">Short notes and snippets. No fluff.</p>
             </section>
 
-            <!-- Training sub-pages as SAME tiles as Home -->
             <section class="hub-row">
                 <div class="row g-3 justify-content-center">
                     <div class="col-12 col-sm-6 col-md-auto">
@@ -100,18 +62,11 @@
                 </div>
             </section>
 
-            <footer class="border-top mt-auto pt-5 pb-3">
-                <div class="d-flex justify-content-between flex-wrap gap-2 small text-muted">
-                    <div>© <span id="year"></span> Frank Runfola</div>
-                    <div>Training</div>
-                </div>
-            </footer>
+            <footer id="siteFooter" class="border-top mt-auto pt-5 pb-3"></footer>
         </main>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/js/layout.js"></script>
         <script src="assets/js/nav.js"></script>
-        <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
     </body>
 </html>
