--- a/pyspark.html
+++ b/pyspark.html
@@ -47,13 +47,13 @@
 
                             <div class="d-flex gap-2">
                                 <a class="btn btn-sm btn-soft btn-icon"
-                                    href="https://github.com/YOUR_GITHUB" target="_blank" rel="noreferrer"
+                                    href="https://github.com/FrankRunfola1229" target="_blank" rel="noreferrer"
                                     aria-label="GitHub">
                                     <i class="bi bi-github"></i>
                                 </a>
 
                                 <a class="btn btn-sm btn-soft btn-icon"
-                                    href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" rel="noreferrer"
+                                    href="https://www.linkedin.com/in/frank-runfola-92897b53/"" target="_blank" rel="noreferrer"
                                     aria-label="LinkedIn">
                                     <i class="bi bi-linkedin"></i>
                                 </a>
