--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
     </head>
 
-    <body class="min-vh-100 d-flex flex-column" data-page="home" data-show-back="0" data-footer-right="Static • Azure">
+    <body class="min-vh-100 d-flex flex-column" data-show-back="0" data-footer-right="Static • Azure">
         <div id="siteHeader"></div>
         <div id="siteBackbar"></div>
 
@@ -25,16 +25,24 @@
                         <h1 class="headline m-0">Azure Data Engineering.</h1>
                         <p class="subhead mb-0 mt-2">Simple, auditable pipelines.</p>
 
-                        <div class="svc-row hero-services" id="heroServices" aria-label="Core Azure services"></div>
+                        <!-- Short intro (minimal) -->
+                        <div class="mt-3 small text-muted">
+                            <div>Self-learning data engineering outside of work.</div>
+                            <div>Full-time Test Automation Architect.</div>
+                        </div>
+
+                        <!-- Azure service pills (rendered by home.js) -->
+                        <div class="svc-row hero-services mt-3" id="heroServices" aria-label="Core Azure services"></div>
+
                     </div>
                 </div>
             </section>
 
-            <section class="hub-row">
+            <section class="hub-row hub-row-two">
                 <div class="row g-3 justify-content-center">
                     <div class="col-12 col-sm-6 col-md-auto">
                         <a class="hub-btn hub-tile" href="projects.html" aria-label="Go to Projects">
-                            <div class="hub-left">
+                            <div class="hub-left text-center">
                                 <div class="hub-ico"><i class="bi bi-boxes"></i></div>
                                 <div class="text-center">
                                     <p class="hub-title">Projects</p>
@@ -46,7 +54,7 @@
 
                     <div class="col-12 col-sm-6 col-md-auto">
                         <a class="hub-btn hub-tile" href="training.html" aria-label="Go to Training">
-                            <div class="hub-left">
+                            <div class="hub-left text-center">
                                 <div class="hub-ico"><i class="bi bi-journal-code"></i></div>
                                 <div class="text-center">
                                     <p class="hub-title">Training</p>
