--- a/training-sql.html
+++ b/training-sql.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Training — SQL</title>
-        <meta name="description" content="SQL training notes and examples." />
+        <meta name="description" content="SQL training snippets." />
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -21,53 +21,22 @@
         <main class="container pt-4 pb-3 flex-grow-1 d-flex flex-column" style="max-width: 1200px;">
             <section class="card-soft hero-card p-4 p-md-4 mb-3">
                 <h1 class="headline m-0">Training / SQL</h1>
-                <p class="subhead mb-0 mt-2">The stuff you actually use in analytics.</p>
+                <p class="subhead mb-0 mt-2">Snippets you’ll use in real pipelines.</p>
             </section>
 
-            <div class="row g-4">
-                <div class="col-lg-6">
-                    <article class="project-card">
-                        <div class="project-body">
-                            <div class="project-title">Window function</div>
-                            <div class="project-desc">Rank and dedupe without losing history.</div>
-                            <pre class="m-0"><code class="language-sql">WITH ranked AS (
-  SELECT
-    *,
-    ROW_NUMBER() OVER (PARTITION BY customer_id ORDER BY updated_at DESC) AS rn
-  FROM customers_raw
-)
-SELECT *
-FROM ranked
-WHERE rn = 1;</code></pre>
-                        </div>
-                    </article>
-                </div>
-
-                <div class="col-lg-6">
-                    <article class="project-card">
-                        <div class="project-body">
-                            <div class="project-title">Group + KPI</div>
-                            <div class="project-desc">Daily rollups (Gold dataset style).</div>
-                            <pre class="m-0"><code class="language-sql">SELECT
-  CAST(event_ts AS DATE) AS event_date,
-  event_type,
-  COUNT(*) AS event_count
-FROM events_silver
-GROUP BY CAST(event_ts AS DATE), event_type
-ORDER BY event_date, event_type;</code></pre>
-                        </div>
-                    </article>
-                </div>
-            </div>
+            <section class="row g-4" id="snippetsGrid" aria-live="polite"></section>
 
             <footer id="siteFooter" class="border-top mt-auto pt-5 pb-3"></footer>
         </main>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/prism.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-sql.min.js"></script>
 
+        <script src="assets/js/shared.js"></script>
         <script src="assets/js/layout.js"></script>
         <script src="assets/js/nav.js"></script>
+        <script src="assets/js/sql.js"></script>
     </body>
 </html>
