--- a/training.html
+++ b/training.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
     </head>
 
-    <body class="min-vh-100 d-flex flex-column" data-page="training" data-show-back="1" data-footer-right="Training">
+    <body class="min-vh-100 d-flex flex-column" data-show-back="1" data-footer-right="Training">
         <div id="siteHeader"></div>
         <div id="siteBackbar"></div>
 
@@ -31,6 +31,18 @@
                                 <div class="text-center">
                                     <p class="hub-title">PySpark</p>
                                     <p class="hub-sub">Transforms • Delta • patterns</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-md-auto">
+                        <a class="hub-btn hub-tile" href="training-pyspark-labs.html" aria-label="Go to PySpark Labs">
+                            <div class="hub-left">
+                                <div class="hub-ico"><i class="bi bi-flask"></i></div>
+                                <div class="text-center">
+                                    <p class="hub-title">PySpark Labs</p>
+                                    <p class="hub-sub">Run-ready mini tasks</p>
                                 </div>
                             </div>
                         </a>
@@ -66,6 +78,7 @@
         </main>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/js/shared.js"></script>
         <script src="assets/js/layout.js"></script>
         <script src="assets/js/nav.js"></script>
     </body>
