--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
 
                         <!-- Short intro (minimal) -->
                         <div class="mt-3 small text-muted">
-                            <div>Self-learning data engineering outside of work.</div>
-                            <div>Full-time Test Automation Architect.</div>
+                            <div>Azure-only data engineering projects built like production: Medallion layers, Delta, orchestration, repeatable runs.</div>
+                            <div>Each project is end-to-end (ADF • ADLS Gen2 • Databricks • Synapse) with clear READMEs and deliberate trade-offs.</div>
+                            <div>Training is my working notebook: PySpark patterns, SQL, and data modeling—kept short and usable.</div>
+                        </div>
+<div>Full-time Test Automation Architect.</div>
                         </div>
 
                         <!-- Azure service pills (rendered by home.js) -->
@@ -53,6 +56,19 @@
                     </div>
 
                     <div class="col-12 col-sm-6 col-md-auto">
+                        <a class="hub-btn hub-tile" href="labs.html" aria-label="Go to Labs">
+                            <div class="hub-left text-center">
+                                <div class="hub-ico"><i class="bi bi-flask"></i></div>
+                                <div class="text-center">
+                                    <p class="hub-title">Labs</p>
+                                    <p class="hub-sub">Hands-on, run-ready tasks</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+
+                    <div class="col-12 col-sm-6 col-md-auto">
                         <a class="hub-btn hub-tile" href="training.html" aria-label="Go to Training">
                             <div class="hub-left text-center">
                                 <div class="hub-ico"><i class="bi bi-journal-code"></i></div>
@@ -72,7 +88,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
         <script src="assets/js/shared.js"></script>
         <script src="assets/js/layout.js"></script>
-        <script src="assets/js/nav.js"></script>
         <script src="assets/js/home.js"></script>
     </body>
 </html>
