--- a/labs-pyspark.html
+++ b/labs-pyspark.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Training — PySpark</title>
-        <meta name="description" content="PySpark training snippets." />
+        <title>Labs — PySpark</title>
+        <meta name="description" content="Run-ready PySpark labs you can actually run." />
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -12,30 +12,34 @@
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism-tomorrow.min.css">
         <link rel="stylesheet" href="assets/css/styles.css">
-        <link rel="stylesheet" href="assets/css/pyspark.css">
     </head>
 
-    <body class="min-vh-100 d-flex flex-column" data-page="pyspark" data-show-back="1" data-footer-right="PySpark">
+    <body class="min-vh-100 d-flex flex-column"
+        data-show-back="1"
+        data-footer-right="PySpark Labs">
+
         <div id="siteHeader"></div>
         <div id="siteBackbar"></div>
 
-        <main class="container pyspark-wrap pt-4 pb-3 flex-grow-1 d-flex flex-column">
+        <main class="container pt-4 pb-3 flex-grow-1 d-flex flex-column" style="max-width: 1200px;">
             <section class="card-soft hero-card p-4 p-md-4 mb-3">
-                <h1 class="headline m-0">Training / PySpark</h1>
-                <p class="subhead mb-0 mt-2">Snippets you can actually use.</p>
+                <h1 class="headline m-0">Labs / PySpark Labs</h1>
+                <p class="subhead mb-0 mt-2">Short, practical labs. Run them. Learn faster.</p>
             </section>
 
-            <section class="row g-4" id="snippetsGrid" aria-live="polite"></section>
+            <!-- Rendered by assets/js/pyspark-labs.js -->
+            <section class="row g-4" id="labsGrid" aria-live="polite"></section>
 
             <footer id="siteFooter" class="border-top mt-auto pt-5 pb-3"></footer>
         </main>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/prism.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-python.min.js"></script>
 
         <script src="assets/js/shared.js"></script>
         <script src="assets/js/layout.js"></script>
-        <script src="assets/js/pyspark.js"></script>
+        <script src="assets/js/pyspark-labs.js"></script>
     </body>
 </html>
