--- a/training-pyspark-labs.html
+++ b/training-pyspark-labs.html
@@ -5,6 +5,10 @@
     <meta http-equiv="refresh" content="0; url=labs-pyspark.html" />
     <meta name="robots" content="noindex" />
     <title>Redirecting…</title>
+        <link rel="icon" href="assets/img/favicon.ico" sizes="any">
+        <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg">
+        <link rel="icon" type="image/png" href="assets/img/favicon.png">
+        <link rel="apple-touch-icon" href="assets/img/favicon.png">
   </head>
   <body>
     <p>Redirecting to <a href="labs-pyspark.html">labs-pyspark.html</a>…</p>
