--- a/training-sql.html
+++ b/training-sql.html
@@ -8,8 +8,10 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <link rel="icon" href="assets/img/favicon.ico" sizes="any">
         <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg">
-
+        <link rel="icon" type="image/png" href="assets/img/favicon.png">
+        <link rel="apple-touch-icon" href="assets/img/favicon.png">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism-tomorrow.min.css">
         <link rel="stylesheet" href="assets/css/styles.css">
     </head>
@@ -18,7 +20,7 @@
         <div id="siteHeader"></div>
         <div id="siteBackbar"></div>
 
-        <main class="container pt-4 pb-3 flex-grow-1 d-flex flex-column" style="max-width: 1200px;">
+        <main class="container pt-4 pb-3 flex-grow-1 d-flex flex-column">
             <section class="card-soft hero-card p-4 p-md-4 mb-3">
                 <h1 class="headline m-0">Training / SQL</h1>
                 <p class="subhead mb-0 mt-2">Snippets you’ll use in real pipelines.</p>
