--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <link rel="icon" href="assets/img/favicon.ico" sizes="any">
         <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg">
+        <link rel="icon" type="image/png" href="assets/img/favicon.png">
+        <link rel="apple-touch-icon" href="assets/img/favicon.png">
         <link rel="stylesheet" href="assets/css/styles.css">
     </head>
 
@@ -25,13 +28,14 @@
                         <h1 class="headline m-0">Azure Data Engineering.</h1>
                         <p class="subhead mb-0 mt-2">Simple, auditable pipelines.</p>
 
-                        <!-- Short intro (minimal) -->
-                        <div class="mt-3 small text-muted">
-                            <div>Azure-only data engineering projects built like production: Medallion layers, Delta, orchestration, repeatable runs.</div>
-                            <div>Each project is end-to-end (ADF • ADLS Gen2 • Databricks • Synapse) with clear READMEs and deliberate trade-offs.</div>
-                            <div>Training is my working notebook: PySpark patterns, SQL, and data modeling—kept short and usable.</div>
-                        </div>
-<div>Full-time Test Automation Architect.</div>
+                        <!-- Short intro -->
+                        <div class="hero-intro mt-3">
+                            <p class="mb-2">Azure-only data engineering portfolio focused on practical, production-style pipelines.</p>
+                            <ul class="mb-0">
+                                <li><strong>End-to-end builds:</strong> ADF → ADLS Gen2 → Databricks → Synapse.</li>
+                                <li><strong>Real patterns:</strong> Medallion layers, Delta, partitioning, and repeatable runs.</li>
+                                <li><strong>Readable docs:</strong> every project ships with a clean README and clear trade-offs.</li>
+                            </ul>
                         </div>
 
                         <!-- Azure service pills (rendered by home.js) -->
@@ -58,7 +62,7 @@
                     <div class="col-12 col-sm-6 col-md-auto">
                         <a class="hub-btn hub-tile" href="labs.html" aria-label="Go to Labs">
                             <div class="hub-left text-center">
-                                <div class="hub-ico"><i class="bi bi-flask"></i></div>
+                                <div class="hub-ico"><img class="hub-ico-img" src="assets/img/icon-labs.svg" alt="" aria-hidden="true"></div>
                                 <div class="text-center">
                                     <p class="hub-title">Labs</p>
                                     <p class="hub-sub">Hands-on, run-ready tasks</p>
