--- a/labs-pyspark.html
+++ b/labs-pyspark.html
@@ -8,8 +8,10 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <link rel="icon" href="assets/img/favicon.ico" sizes="any">
         <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg">
-
+        <link rel="icon" type="image/png" href="assets/img/favicon.png">
+        <link rel="apple-touch-icon" href="assets/img/favicon.png">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism-tomorrow.min.css">
         <link rel="stylesheet" href="assets/css/styles.css">
     </head>
@@ -21,13 +23,40 @@
         <div id="siteHeader"></div>
         <div id="siteBackbar"></div>
 
-        <main class="container pt-4 pb-3 flex-grow-1 d-flex flex-column" style="max-width: 1200px;">
+        <main class="container pt-4 pb-3 flex-grow-1 d-flex flex-column">
             <section class="card-soft hero-card p-4 p-md-4 mb-3">
                 <h1 class="headline m-0">Labs / PySpark Labs</h1>
                 <p class="subhead mb-0 mt-2">Short, practical labs. Run them. Learn faster.</p>
             </section>
 
             <!-- Rendered by assets/js/pyspark-labs.js -->
+            <section class="card-soft p-4 p-md-4 mb-3">
+                <h2 class="section-title m-0">PySpark basics (quick mental model)</h2>
+                <p class="text-muted mb-3 mt-2">
+                    This is the minimum you need to not get lost in Databricks notebooks. Source: Microsoft Learn
+                    (<a href="https://learn.microsoft.com/en-us/azure/databricks/pyspark/" target="_blank" rel="noopener">PySpark on Azure Databricks</a>).
+                </p>
+
+                <ul class="mb-3">
+                    <li><strong>SparkSession</strong> is your entry point (Databricks gives you <code>spark</code> already).</li>
+                    <li><strong>DataFrames</strong> are the core API. You build a plan with <strong>transformations</strong> (lazy), and work actually runs on <strong>actions</strong> (like <code>show()</code>, <code>count()</code>, <code>write</code>).</li>
+                    <li>Use built-in functions (<code>pyspark.sql.functions</code>) and column expressions — avoid Python loops and UDFs unless you truly need them.</li>
+                    <li>Debug smart: <code>printSchema()</code>, <code>show()</code>, and <code>explain()</code> tell you what’s happening.</li>
+                    <li>Performance basics: filter early, select only needed columns, avoid <code>collect()</code>, cache only when reused.</li>
+                </ul>
+
+                <div class="small text-muted mb-2">Tiny pattern you’ll use everywhere:</div>
+                <pre class="mb-0"><code class="language-python">from pyspark.sql import functions as F
+
+df = spark.read.format("json").load("/path/in")
+out = (df
+       .select("id", "ts", "amount")
+       .where(F.col("amount") &gt; 0))
+
+out.write.format("delta").mode("overwrite").save("/path/out")</code></pre>
+            </section>
+
+
             <section class="row g-4" id="labsGrid" aria-live="polite"></section>
 
             <footer id="siteFooter" class="border-top mt-auto pt-5 pb-3"></footer>
