--- a/pyspark.html
+++ b/pyspark.html
@@ -7,8 +7,10 @@
         <meta name="description" content="PySpark basics with clean, simple code snippets." />
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="icon" href="assets/img/favicon.ico" sizes="any">
         <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg">
-
+        <link rel="icon" type="image/png" href="assets/img/favicon.png">
+        <link rel="apple-touch-icon" href="assets/img/favicon.png">
         <!-- Prism syntax highlighting -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism-tomorrow.min.css">
 
