--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Azure Data Engineering portfolio." />
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
         <link rel="icon" href="assets/img/favicon.ico" sizes="any">
         <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg">
         <link rel="icon" type="image/png" href="assets/img/favicon.png">
@@ -62,7 +62,7 @@
                     <div class="col-12 col-sm-6 col-md-auto">
                         <a class="hub-btn hub-tile" href="labs.html" aria-label="Go to Labs">
                             <div class="hub-left text-center">
-                                <div class="hub-ico"><img class="hub-ico-img" src="assets/img/icon-labs.svg" alt="" aria-hidden="true"></div>
+                                <div class="hub-ico"><i class="bi bi-flask-fill"></i></div>
                                 <div class="text-center">
                                     <p class="hub-title">Labs</p>
                                     <p class="hub-sub">Hands-on, run-ready tasks</p>
@@ -70,7 +70,6 @@
                             </div>
                         </a>
                     </div>
-
 
                     <div class="col-12 col-sm-6 col-md-auto">
                         <a class="hub-btn hub-tile" href="training.html" aria-label="Go to Training">
