--- a/labs.html
+++ b/labs.html
@@ -30,7 +30,7 @@
                     <div class="col-12 col-sm-6 col-md-auto">
                         <a class="hub-btn hub-tile" href="labs-pyspark.html" aria-label="Go to PySpark labs">
                             <div class="hub-left">
-                                <div class="hub-ico"><i class="bi bi-flask"></i></div>
+                                <div class="hub-ico"><i class="bi bi-lightning-charge"></i></div>
                                 <div class="text-center">
                                     <p class="hub-title">PySpark Labs</p>
                                     <p class="hub-sub">Run-ready mini tasks</p>
